# overtourism

./: .gitignore  CODEOWNERS  Dockerfile  README.md  process_data.py  pyproject.toml
data_preparation/: aux_gen_mapping.py  compute_system_capacity_indexes.py  gen_all_indexes.py  gen_capacity_indexes.py  gen_diffusion_indexes.py  gen_geojson.py  gen_hidden_indexes.py  gen_overtourism_indexes.py  gen_presence_stats.py  plot_capacity_indexes.py  plot_presence_stats.ipynb  test_hidden_tourism_molveno.ipynb  utils.py
data_preparation/diffusion/: AtomicAnalyzer.py  BusStops.py  Coils.py  DataHandler.py  DateTime_.py  ExploreData.ipynb  GenerateFakeFluxes.py  GeometryComparisons.py  GeometrySphere.py  Grid.py  Istat_data_population.py  Lattice.py  Markowitz.py  Markowitz_pipeline.py  MeasuresOfImportance.py  Mobility_Hierarchy.py  Mobility_Hierarchy_functions.py  OD.py  OD_pipeline.py  OD_pipeline_new.py  OsAndFileHandling.py  Plots.py  Plots_geopandas.py  PolygonRetrievialOsmnx.py  Presences.py  README.md  README_subdivided_extraction.md  ResourceCheck.py  RoadNetwork.py  ShapeFiles.py  VodafoneData.py  _POIs_four_square.py  constant_names_variables.py  debug_input_data.ipynb  debug_markowitz.ipynb  debug_markowitz_all_aggregated.ipynb  default_parameters.py  dictionary_handles.py  dir_handler.py  example_subdivided_transport_extraction.py  (+18 more)
data_preparation/mapping/: map_comuni_into_apt.json  (+4 more)
validation/: capacita_002.py  dati_001.py  dati_001_tourism.py  diffusione_002.py  monitoraggio_001_esecuzione.py  monitoraggio_001_preparazione.py  overtourism_002.py
(+78 files in other folders)
