[project]
name = "overtourism"
version = "0.1.0"
description = "Trentino overtourism analysis and modeling"
requires-python = ">=3.11"
dependencies = [
    "civic-digital-twins==0.5.0",
    "digitalhub==0.14.4",
    "fastapi[standard]",
    "geojson>=3.2.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy",
    "orjson>=3.11.3",
    "pandas",
    "plotly>=6.3.0",
    "pyarrow>19.0",
    "scikit-learn>=1.7.1",
    "scipy",
    "slugify>=0.0.1",
    "streamlit-option-menu",
    "streamlit",
    "unidecode>=1.4.0",
    "networkx>=3.5",
    "contextily>=1.6.2",
    "matplotlib-scalebar>=0.9.0",
    "osmnx>=2.0.6",
    "polars",
    "haversine",
    "tqdm",
    "seaborn",
    "gtfs_kit",
    "openpyxl>=3.1.5",
]
license = "Apache-2.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["black>=24.10.0", "pytest>=8.4.1"]
